--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,6 +1,11 @@
 body{
     font-family: 'Titan One', cursive;
 }
+
+.container{
+    width: 95%;
+}
+
 .titleDiv{
     text-align: center;
     padding-left: 10%;
@@ -23,4 +28,27 @@ body{
     margin-top: 25.8%;
     text-align: center;
     font-size: 20px;
+}
+
+#myCanvas {
+    width: 100%;
+    height: 100%;
+}
+
+#keyWord {
+    text-align: center;
+    margin-top: 200px;
+    font-stretch: extra-expanded;
+    font-size: 70px;
+}
+
+.panel-body {
+    padding: 15px;
+    min-height: 650px;
+}
+
+.row {
+    margin-right: -15px;
+    margin-left: -15px;
+    height: 90%;
 }
